a
gcc -c -O1 -std=c99 -Wall -Werror -fPIC -march=amdfam10 -g3 -Wno-deprecated-declarations -D_XOPEN_SOURCE=600 -nostdinc -Iinclude -msoft-float -mno-sse -mno-red-zone -fno-builtin -fno-stack-protector -o obj/sys/kprintf.o sys/kprintf.c
gcc -c -O1 -std=c99 -Wall -Werror -fPIC -march=amdfam10 -g3 -Wno-deprecated-declarations -D_XOPEN_SOURCE=600 -nostdinc -Iinclude -msoft-float -mno-sse -mno-red-zone -fno-builtin -fno-stack-protector -o obj/sys/virt_mm.o sys/virt_mm.c
gcc -c -O1 -std=c99 -Wall -Werror -fPIC -march=amdfam10 -g3 -Wno-deprecated-declarations -D_XOPEN_SOURCE=600 -nostdinc -Iinclude -msoft-float -mno-sse -mno-red-zone -fno-builtin -fno-stack-protector -o obj/sys/idt.o sys/idt.c
gcc -c -O1 -std=c99 -Wall -Werror -fPIC -march=amdfam10 -g3 -Wno-deprecated-declarations -D_XOPEN_SOURCE=600 -nostdinc -Iinclude -msoft-float -mno-sse -mno-red-zone -fno-builtin -fno-stack-protector -o obj/sys/main.o sys/main.c
gcc -c -O1 -std=c99 -Wall -Werror -fPIC -march=amdfam10 -g3 -Wno-deprecated-declarations -D_XOPEN_SOURCE=600 -nostdinc -Iinclude -msoft-float -mno-sse -mno-red-zone -fno-builtin -fno-stack-protector -o obj/sys/process.o sys/process.c
sys/process.c: In function 'get_file':
sys/process.c:316:17: error: 'pwd' undeclared (first use in this function)
     copyHelper (pwd, temp,0,cStrlen(pwd));
                 ^
sys/process.c:316:17: note: each undeclared identifier is reported only once for each function it appears in
Makefile:86: recipe for target 'obj/sys/process.o' failed
make: *** [obj/sys/process.o] Error 1
